cleaned up style

--- a/notebooks/Refactor tests.ipynb
+++ b/notebooks/Refactor tests.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -29,6 +29,33 @@
     "rdm = task.RDM(N_in = 2, N_out = 2, dt = 10, tau = 100, T = 2000, N_batch = 64)\n",
     "gen = rdm.batch_generator()\n",
     "params = rdm.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tau\n",
+      "N_in\n",
+      "N_batch\n",
+      "T\n",
+      "N_steps\n",
+      "alpha\n",
+      "dt\n",
+      "N_out\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key,val in params.iteritems():\n",
+    "    print key"
    ]
   },
   {
