--- a/notebooks/Refactor tests.ipynb
+++ b/notebooks/Refactor tests.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "from sisyphus2.backend.models.basic import Basic, BasicSigmoid, BasicScan\n",
     "from sisyphus2.backend.models.lstm import LSTM\n",
-    "from sisyphus2.backend import task\n",
+    "from sisyphus2.tasks import rdm as rd\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from matplotlib import pyplot as plt\n",
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "rdm = task.RDM(N_in = 2, N_out = 2, dt = 10, tau = 100, T = 2000, N_batch = 128)\n",
+    "rdm = rd.RDM(N_in = 2, N_out = 2, dt = 10, tau = 100, T = 2000, N_batch = 128)\n",
     "gen = rdm.batch_generator()"
    ]
   },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -84,45 +84,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter 1280, Minibatch Loss= 0.228539\n",
-      "Iter 2560, Minibatch Loss= 0.175887\n",
-      "Iter 3840, Minibatch Loss= 0.142395\n",
-      "Iter 5120, Minibatch Loss= 0.133669\n",
-      "Iter 6400, Minibatch Loss= 0.135166\n",
-      "Iter 7680, Minibatch Loss= 0.133913\n",
-      "Iter 8960, Minibatch Loss= 0.115384\n",
-      "Iter 10240, Minibatch Loss= 0.075431\n",
-      "Iter 11520, Minibatch Loss= 0.043617\n",
-      "Iter 12800, Minibatch Loss= 0.027929\n",
-      "Iter 14080, Minibatch Loss= 0.025738\n",
-      "Iter 15360, Minibatch Loss= 0.022841\n",
-      "Iter 16640, Minibatch Loss= 0.023819\n",
-      "Iter 17920, Minibatch Loss= 0.020387\n",
-      "Iter 19200, Minibatch Loss= 0.022274\n",
-      "Iter 20480, Minibatch Loss= 0.018082\n",
-      "Iter 21760, Minibatch Loss= 0.018843\n",
-      "Iter 23040, Minibatch Loss= 0.018745\n",
-      "Iter 24320, Minibatch Loss= 0.018822\n",
-      "Iter 25600, Minibatch Loss= 0.017670\n",
-      "Iter 26880, Minibatch Loss= 0.015843\n",
-      "Iter 28160, Minibatch Loss= 0.017330\n",
-      "Iter 29440, Minibatch Loss= 0.016921\n",
-      "Iter 30720, Minibatch Loss= 0.015399\n",
-      "Iter 32000, Minibatch Loss= 0.015724\n",
-      "Iter 33280, Minibatch Loss= 0.015637\n",
-      "Iter 34560, Minibatch Loss= 0.015081\n",
-      "Iter 35840, Minibatch Loss= 0.014073\n",
-      "Iter 37120, Minibatch Loss= 0.014340\n",
-      "Iter 38400, Minibatch Loss= 0.014535\n",
-      "Iter 39680, Minibatch Loss= 0.013945\n",
-      "Iter 40960, Minibatch Loss= 0.012897\n",
-      "Iter 42240, Minibatch Loss= 0.013936\n",
-      "Iter 43520, Minibatch Loss= 0.013712\n",
-      "Iter 44800, Minibatch Loss= 0.012791\n",
-      "Iter 46080, Minibatch Loss= 0.012506\n",
-      "Iter 47360, Minibatch Loss= 0.012785\n",
-      "Iter 48640, Minibatch Loss= 0.012306\n",
-      "Iter 49920, Minibatch Loss= 0.011802\n",
+      "Iter 1280, Minibatch Loss= 0.167348\n",
+      "Iter 2560, Minibatch Loss= 0.126378\n",
+      "Iter 3840, Minibatch Loss= 0.125831\n",
+      "Iter 5120, Minibatch Loss= 0.129202\n",
+      "Iter 6400, Minibatch Loss= 0.120079\n",
+      "Iter 7680, Minibatch Loss= 0.129025\n",
+      "Iter 8960, Minibatch Loss= 0.113439\n",
       "Optimization finished!\n",
       "Model saved in file: ../weights/refactor_weights.npz\n"
      ]
@@ -130,57 +98,25 @@
     {
      "data": {
       "text/plain": [
-       "([0.22853935,\n",
-       "  0.17588723,\n",
-       "  0.14239493,\n",
-       "  0.13366923,\n",
-       "  0.13516605,\n",
-       "  0.13391282,\n",
-       "  0.11538444,\n",
-       "  0.075430885,\n",
-       "  0.043616708,\n",
-       "  0.027929261,\n",
-       "  0.025738267,\n",
-       "  0.022841178,\n",
-       "  0.023819355,\n",
-       "  0.020386919,\n",
-       "  0.022274278,\n",
-       "  0.018082475,\n",
-       "  0.01884295,\n",
-       "  0.018745499,\n",
-       "  0.01882248,\n",
-       "  0.017670276,\n",
-       "  0.015842522,\n",
-       "  0.017329758,\n",
-       "  0.016920619,\n",
-       "  0.015399073,\n",
-       "  0.015724139,\n",
-       "  0.015636615,\n",
-       "  0.015081108,\n",
-       "  0.014073082,\n",
-       "  0.014340349,\n",
-       "  0.014535146,\n",
-       "  0.013944745,\n",
-       "  0.012897027,\n",
-       "  0.013936485,\n",
-       "  0.013711641,\n",
-       "  0.012790677,\n",
-       "  0.012506153,\n",
-       "  0.012785112,\n",
-       "  0.012306279,\n",
-       "  0.011801565],\n",
-       " 203.88654279708862,\n",
-       " 75.83699011802673)"
+       "([0.16734761,\n",
+       "  0.12637751,\n",
+       "  0.12583135,\n",
+       "  0.12920219,\n",
+       "  0.12007873,\n",
+       "  0.12902483,\n",
+       "  0.11343858],\n",
+       " 46.464597940444946,\n",
+       " 75.59938597679138)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model.build()\n",
-    "model.train(gen, {'save_weights_path': '../weights/refactor_weights.npz', 'training_iters': 50000})"
+    "model.train(gen, {'save_weights_path': '../weights/refactor_weights.npz', 'training_iters': 10000})"
    ]
   },
   {
@@ -322,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
